fix: background and foreground colors do not have a sufficient contrast ratio

--- a/practices/practice-one/src/assets/stylesheets/abstracts/_variables.scss
+++ b/practices/practice-one/src/assets/stylesheets/abstracts/_variables.scss
@@ -105,9 +105,9 @@ $box-shadow-card-box: rgba(0, 0, 0, 0.1);
 /* Book */
 $text-book-title: 14px;
 $text-book-results: 15px;
-$color-book-title: #0d75ff;
+$color-book-title: $color-secondary;
 $color-book-results: #222531;
-$bg-color-book-title: rgba(13, 117, 255, 0.05);
+$bg-color-book-title: #14282f;
 
 /* Category */
 $text-category-title: $text-large;
@@ -116,19 +116,19 @@ $text-category-shorthand: 16px;
 $color-category-item: #222531;
 $color-category-total: $color-filter;
 $text-category-total: 12px;
-$bg-color-category-Adventure: #ff6231;
-$bg-color-category-Contemporary: #0da8ff;
-$bg-color-category-Romance: #f388b5;
-$bg-color-category-Fantasy: #770dff;
-$bg-color-category-Dystopian: #4f85ac;
+$bg-color-category-Adventure: #14282f;
+$bg-color-category-Contemporary: #14282f;
+$bg-color-category-Romance: #14282f;
+$bg-color-category-Fantasy: #14282f;
+$bg-color-category-Dystopian: #14282f;
 $bg-color-category-Mystery: #14282f;
-$bg-color-category-Horror: #f1121f;
-$bg-color-category-Thriller: #0d8bff;
-$bg-color-category-Paranormal: #ffd80d;
-$bg-color-category-Historical: #75828a;
-$bg-color-category-Scifi: #6f5a8a;
-$bg-color-category-Memoir: #94aae4;
-$bg-color-category-Sports: #b4bebf;
+$bg-color-category-Horror: #14282f;
+$bg-color-category-Thriller: #14282f;
+$bg-color-category-Paranormal: #14282f;
+$bg-color-category-Historical: #14282f;
+$bg-color-category-Scifi: #14282f;
+$bg-color-category-Memoir: #14282f;
+$bg-color-category-Sports: #14282f;
 
 /* Filter */
 $text-filter-title: 15px;
